# Puffin-Pilot-Qualification

./: .gitignore  README.md
research/puffin_bot/drive/: drive.py  drive.wsgi
research/puffin_bot/web/: index.html
research/puffin_net/: main.py  network.py
research/resources/: links.txt
simulator/gate_detector/ellipsoid/: main.py
simulator/gate_detector/outline/: main.py  utils.py
simulator/gate_detector/outline/data/: make_labels.py
test2/: generate_results.py  generate_submission.py  requirements.txt  test.py
test2/1_gate_finder/: gate_finder.py  make_training_data.py  train.py
test2/3_fiducial_matcher/: __init__.py  clusters.py  common.py  corners.py  fiducial_matcher.py  frames.py
test2/4_pose_estimator/: pose_estimator.py  root_finder.py
test2/alphapilot_scripts/scorer_scripts_v1_1_/: scorer.py
test2/alphapilot_scripts/starter_scripts_v1_1_/: generate_results.py
test2/camera_calibration/: camera_calibration.json  camera_calibration.pickle  camera_calibration.py  main.py  undistort_training_data.py
test2/common/camera_calibration/: camera_calibration.pickle  camera_calibration.py  make_random_selection.py  undistort_training_data.py
test2/common/camera_calibration/calibration_data/: meta.json
test2/common/gate_model/: __init__.py  gate_model.py  gate_model_utils.py
test2/fiducials/point_extraction/: point_extraction.py
test2/step_1_gate_finder/: __init__.py  gate_finder.py  horizontal_gatenet.py  make_training_data.py
test2/step_2_fiducial_finder/: __init__.py  fiducial_finder.py  fiducials_make_masks.py  gatenet.py  test_model.py  train.py  utils.py
test2/step_2_fiducial_finder/logdir/: checkpoint_20190207_loss295  checkpoint_20190214_loss264
test2/step_3_fiducial_matcher/: __init__.py  clusters.py  common.py  corners.py  fiducial_matcher.py  frames.py  point_extraction.py
test2/step_4_pose_estimator/: __init__.py  points_fitter.py  pose_estimator.py  quadrilateral_fitter.py  root_finder.py
test2/step_5_flying_region_generator/: __init__.py  flying_region_generator.py
test2/step_5_pillar_finder/: __init__.py  pillar_finder.py
test2/step_6_flying_region_generator/: __init__.py  flying_region_generator.py
test2/tools/fiducials/: fiducials_make_masks.py  fiducials_overlay_masks.py  gate_model.py  gatenet.py  measure_annotations.py  test_model.py  train.py  utils.py
test3/src/puffin_ir_marker_odometry/: CMakeLists.txt  package.xml
test3/src/puffin_ir_marker_odometry/src/: ir_marker_odometry.cpp  ir_marker_odometry.h  main.cpp  rate_limiter.cpp
test3/src/puffin_pace_notes/: CMakeLists.txt  package.xml
test3/src/puffin_pace_notes/src/: main.cpp  pace_notes.cpp  pace_notes.h
test3/src/puffin_pilot/ir_marker_localizer/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/ir_marker_localizer/src/: ir_marker_localizer_node.cpp  rate_limiter.h
test3/src/puffin_pilot/odometry/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/odometry/src/: odometry_node.cpp
test3/src/puffin_pilot/pace_notes/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/pace_notes/src/: pace_notes_node.cpp
test3/src/puffin_pilot/puffin_launcher/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/puffin_launcher/src/: puffin_launcher_node.cpp
test3/src/puffin_pilot/puffin_pilot/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/puffin_pilot/config/: disturbance_observer.yaml  linear_mpc.yaml  nonlinear_mpc.yaml  rate_thrust_controller.yaml
test3/src/puffin_pilot/puffin_pilot/launch/: puffin_pilot.launch
test3/src/puffin_pilot/puffin_pilot/msg/: GateInfo.msg  PaceNote.msg  Waypoints.msg
test3/src/puffin_pilot/rate_thrust_controller/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/rate_thrust_controller/cfg/: PIDRateThrust.cfg  RateThrustController.cfg
test3/src/puffin_pilot/rate_thrust_controller/launch/: puffin_pilot.launch  rate_thrust_controller_test.launch
test3/src/puffin_pilot/rate_thrust_controller/src/: main.cpp  rate_thrust_controller_node.cpp
test3/src/puffin_pilot/trajectory_generator/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/trajectory_generator/src/: trajectory_generator_node.cpp
test3/src/puffin_pilot/trajectory_visualizer/: CMakeLists.txt  package.xml
test3/src/puffin_pilot/trajectory_visualizer/src/: trajectory_visualizer_node.cpp
test3/src/puffin_state_estimation/: CMakeLists.txt  package.xml
test3/src/puffin_state_estimation/launch/: puffin_state_estimation.launch
test3/src/puffin_state_estimation/src/: imu_orientation_filter_madgwick.cpp  imu_orientation_filter_madgwick.h  imu_orientation_filter_valenti.cpp  imu_orientation_filter_valenti.h  main.cpp  puffin_dynamics.cpp  puffin_dynamics.h
test3/system_identification/: make_timeseries.m  measure_noise.m  puffin.m  thrust_rate_controller.m  thrust_rate_experiment.txt
twister/: notes
twister/gate_detector/outline/: main.py  utils.py
twister/gate_detector/rectangle/: main.py  test.py
twister/gazebo/: model.config  twister.sdf  twister_back_wheel.dae  twister_motor.dae  twister_rim.dae
twister/ros/: README.md  raspicam.yaml
twister/ros/pt_control/: CMakeLists.txt  package.xml
twister/ros/pt_control/config/: pt_control.yaml
twister/ros/pt_control/launch/: pt_control.launch  pt_rqt.launch  pt_rqt.perspective
twister/ros/pt_description/: CMakeLists.txt  package.xml
twister/ros/pt_description/launch/: pt.rviz  pt_rviz.launch
twister/ros/pt_description/meshes/: twister_back_wheel.dae  twister_back_wheel.stl  twister_back_wheel_holder.dae  twister_back_wheel_holder.stl  twister_base.dae  twister_battery_holder.dae  twister_camera_holder.dae  twister_camera_holder.stl  twister_motor.stl  twister_rim.stl  twister_tire.dae  twister_tire.stl  twister_wheel.dae
twister/ros/pt_description/old/: twister.sdf
twister/ros/pt_description/urdf/: materials.xacro  pt.gazebo  pt.xacro  pt.xml
twister/ros/pt_gazebo/: CMakeLists.txt  package.xml
twister/ros/pt_gazebo/launch/: pt_world.launch
twister/ros/pt_gazebo/scripts/: pt_gazebo_odometry.py
twister/ros/pt_gazebo/worlds/: pt.world
twister/ros_resources/: README
(+563 files in other folders)
