<?xml version="1.0"?>
<package>
  <name>puffin_pace_notes</name>
  <version>0.0.1</version>
  <description>publishes pace notes</description>
  <license>GPLv2</license>
  <url type="website">http://no.url</url>

  <maintainer email="team_puffin@gmail.com">team_puffin</maintainer>
  <author email="team_puffin@gmail.com">team_puffin</author>

  <!-- custom dependencies -->

  <!-- standard dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
