<?xml version="1.0"?>
<package format="2">
  <name>ir_marker_localizer</name>
  <version>0.0.1</version>
  <description>IR marker localizer.</description>
  <license>DTP</license>

  <maintainer email="drone.team.puffin@gmail.com">team_puffin</maintainer>
  <author email="drone.team.puffin@gmail.com">team_puffin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  
  <depend>pace_notes</depend>
</package>
