<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.1</version>
  <description>Puffin trajectory generator.</description>
  <license>GPLv2</license>

  <maintainer email="team_puffin@gmail.com">team_puffin</maintainer>
  <author email="team_puffin@gmail.com">team_puffin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>roscpp</depend>
</package>