<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.1</version>
  <description>Puffin trajectory generator</description>
  <license>NoLicense</license>

  <maintainer email="team_puffin@gmail.com">team_puffin</maintainer>
  <author email="team_puffin@gmail.com">team_puffin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
</package>
